--- a/code/R2.css
+++ b/code/R2.css
@@ -62,6 +62,8 @@ td:nth-child(2),td:nth-child(3),td:nth-child(5),td:nth-child(6){
         font-size:1rem;
     }
 }
+/*
 p{
     font-size:1rem;
 }
+*/
